--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,42 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.3.72"
+    // retrofit
+    ext.retrofit_version = '2.7.2'
+    ext.okhttp_version = '4.0.0'
+    ext.gson_version = '2.8.5'
+    ext.converter_version = '2.7.2'
+
+    // dagger-hilt
+    ext.hilt_version = '2.29.1-alpha'
+    ext.hilt_arch_version = '1.0.0-alpha01'
+    // jetpack
+    ext.lifecycle_version = '2.2.0'
+    ext.lifecycleExtensions_version = '2.2.0'
+
+    // RxJava
+    ext.rx_android_version = '3.0.0'
+    ext.rxjava_version = '3.0.6'
+
+    ext.recyclerview_version = '1.1.0'
+    ext.constraint_layout_version = '2.0.1'
+    ext.androidx_core_version = '1.3.1'
+    ext.app_compat_version = '1.2.0'
+    ext.material_version = '1.0.0'
+    ext.androidx_version = '1.1.0'
+
+    ext.junit_version = '4.12'
+    ext.junit_androidx_version = '1.1.2'
+    ext.androidx_espresso_version = '3.3.0'
     repositories {
         google()
         jcenter()
+        maven { url "https://oss.jfrog.org/libs-snapshot" }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-
+        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.29.1-alpha'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
