--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ buildscript {
     ext.junit5_version = '5.4.1'
     ext.junut5_core_version = '1.0.0'
     ext.junit5_runner_version = '1.0.0'
+    ext.junit5_plugin_version = '1.6.2.0'
+    ext.test_runner_version = '1.1.1'
 
     repositories {
         google()
@@ -43,8 +45,8 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.0"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.29.1-alpha'
-        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.6.2.0"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:$junit5_plugin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
