--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,8 @@ buildscript {
     ext.junit5_plugin_version = '1.6.2.0'
     ext.test_runner_version = '1.1.1'
 
+    ext.mockk_version = '1.10.2'
+
     repositories {
         google()
         jcenter()
