--- a/app/build.gradle
+++ b/app/build.gradle
@@ -108,6 +108,10 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
 
+    // -- Animation
+
+    implementation "com.airbnb.android:lottie:$lottie_version"
+
     // --- Unit Test --- //
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:$junit5_version"
