--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,9 @@ buildscript {
     ext.material_version = '1.0.0'
     ext.androidx_version = '1.1.0'
 
+    // Animation
+    ext.lottie_version = '3.4.4'
+
     // Test
     ext.junit_version = '4.12'
     ext.junit_androidx_version = '1.1.2'
