--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,9 @@ buildscript {
     ext.androidx_runner_version = '1.2.0'
     ext.rxbinding_version = '4.0.0'
     ext.rxrelay_version = '3.0.0'
+    ext.google_services_version = '4.3.4'
+    ext.firebase_crashlytics_version = '2.3.0'
+    ext.timber_version = '4.7.1'
 
     ext.mockk_version = '1.10.2'
     ext.mock_web_server_version = '4.4.0'
@@ -57,6 +60,8 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath "de.mannodermaus.gradle.plugins:android-junit5:$junit5_plugin_version"
+        classpath "com.google.gms:google-services:$google_services_version"
+        classpath "com.google.firebase:firebase-crashlytics-gradle:$firebase_crashlytics_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
