--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,12 +54,17 @@ android {
         }
     }
 
-
     buildTypes {
         if (project.hasProperty('RELEASE_STORE_FILE')) {
             release {
                 minifyEnabled true
                 signingConfig signingConfigs.release
+                proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+                buildConfigField "String", "BASE_URL", "\"https://hiring.revolut.codes/api/android/\""
+            }
+        } else {
+            release {
+                minifyEnabled true
                 proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
                 buildConfigField "String", "BASE_URL", "\"https://hiring.revolut.codes/api/android/\""
             }
