--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,8 @@ apply plugin: 'de.mannodermaus.android-junit5'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
 
+apply from: "../ktlint.gradle"
+
 android {
     compileSdkVersion 30
     buildToolsVersion "29.0.3"
